--- a/Assignment13/Style5.css
+++ b/Assignment13/Style5.css
@@ -40,8 +40,7 @@ a{
 #sec_2{
 	margin-top: 90px;
 	height: 320px;
-	display: flex;
-	align-items: center;
+	padding: 20px;
 }
 img{
 	margin: 20px;
@@ -62,9 +61,7 @@ img{
 	border: 2px solid #00D19A;
 	width: 200px;
 	height: 50px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	padding: 20px;
 	background-color: white;
 	margin-left: 30px;
 	text-decoration: none;
